--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@iconscout/react-unicons": "^2.0.2",
     "@mui/icons-material": "^5.15.12",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -14,6 +15,7 @@
     "react-animate-height": "^3.2.3",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-wavify": "^1.10.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
